<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fontify="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/password_header"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="@color/white">

            <LinearLayout
                android:id="@+id/left_navigation_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_navigation_slider_button"
                android:orientation="horizontal">

                <com.nf.flash.fontify.ImageView
                    android:id="@+id/lift_navigation_drawer_icon"
                    android:layout_width="@dimen/arrow_size"
                    android:layout_height="@dimen/arrow_size"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/back_arrow_big" />

                <com.nf.flash.fontify.TextView
                    android:id="@+id/left_navigation_lable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/back"
                    android:textColor="@color/dark_blue_green"
                    android:textSize="@dimen/h6_text_size"
                    fontify:font_name="@string/app_font_medium" />
            </LinearLayout>

        <com.nf.flash.fontify.TextView
            android:id="@+id/create_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableLeft="@drawable/flash_head_icon"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:text="Help"
            android:textColor="@color/black"
            android:textSize="@dimen/h5_text_size" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/password_header"
        android:background="@color/light_gray">

        <com.nf.flash.fontify.TextView
            android:id="@+id/amount_to_pay_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/help_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/help_text_size"
            android:gravity="center"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            fontify:font_name="@string/app_font" />

        <com.nf.flash.fontify.TextView
            android:id="@+id/version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/margin"
            android:textColor="@color/medium_gray"
            android:textSize="@dimen/h6_text_size"
            fontify:font_name="@string/app_font_medium"/>

    </RelativeLayout>
</RelativeLayout>